--- a/AzureFunctions.AngularClient/src/app/function-manage/function-manage.component.html
+++ b/AzureFunctions.AngularClient/src/app/function-manage/function-manage.component.html
@@ -1,10 +1,11 @@
 <div class="wrapper">
-    <div id="function-settings" [fnWriteAccess]="functionApp">
+    <div id="function-settings">
         <div>
             <div class="title">{{ 'functionEdit_functionState' | translate }}</div>
             <div *ngIf="functionInfo" class="function-state">
-                <radio-selector [options]="functionStatusOptions" [defaultValue]="!!functionInfo.config.disabled" (value)="functionStateValueChange.next($event)"></radio-selector>
-                <span class="clickable delete-app" (click)="deleteFunction()">
+                <radio-selector *ngIf="gen === 0" [fnWriteAccess]="functionApp" [options]="functionStatusOptions" [defaultValue]="!!functionInfo.config.disabled" (value)="functionStateValueChange.next($event)"></radio-selector>
+                <radio-selector *ngIf="gen === 1" [options]="functionStatusOptions" [defaultValue]="!!functionInfo.config.disabled" (value)="functionStateValueChange.next($event)"></radio-selector>
+                <span class="clickable delete-app" (click)="deleteFunction()" [fnWriteAccess]="functionApp">
                     <span load-image="image/delete.svg" class="icon-small"></span>
                     {{ 'functionManage_deleteFunction' | translate }}
                 </span>
