--- a/AzureFunctions.AngularClient/src/app/functions-list/functions-list.component.html
+++ b/AzureFunctions.AngularClient/src/app/functions-list/functions-list.component.html
@@ -27,17 +27,26 @@
             </th>
             <th class="icon"></th>
         </tr>
-
         <tr *ngFor="let item of table.items">
             <td><span class="link" (click)="clickRow(item)">{{item.functionName}}</span></td>
             <td>
-                <div [fnWriteAccess]="functionApp">
+                <div *ngIf="gen === 0" [fnWriteAccess]="functionApp">
                     <slide-toggle
-                    [on]="!item.functionInfo.config.disabled"
-                    [isCommand]="true"
-                    [name]="'status' | translate"
-                    [ariaLabelFormat]="'nameAndStateName'"
-                    (change)="enableChange(item, $event)"></slide-toggle>
+                        [on]="!item.functionInfo.config.disabled"
+                        [isCommand]="true"
+                        [name]="'status' | translate"
+                        [ariaLabelFormat]="'nameAndStateName'"
+                        (change)="enableChange(item, $event)">
+                    </slide-toggle>
+                </div>
+                <div *ngIf="gen === 1">
+                    <slide-toggle
+                        [on]="!item.functionInfo.config.disabled"
+                        [isCommand]="true"
+                        [name]="'status' | translate"
+                        [ariaLabelFormat]="'nameAndStateName'"
+                        (change)="enableChange(item, $event)">
+                    </slide-toggle>
                 </div>
             </td>
             <td class="command-icon">
