RDBug 10462943:[Ibiza][Application settings] the Connection string unit will be covered in the Connection strings table when the ‘Application settings’ blade is narrow

--- a/AzureFunctions.AngularClient/src/app/site/site-config/site-config.component.scss
+++ b/AzureFunctions.AngularClient/src/app/site/site-config/site-config.component.scss
@@ -23,7 +23,7 @@ td{
     }
 }
 
-.padded-col {
+.padded-col{
     padding-left: 2px;
     padding-right: 2px;
 }
@@ -32,7 +32,7 @@ td{
     width: 33%;
 }
 
-.two-thirds-Col{
+.two-thirds-col{
     width: 66%;
 }
 
