--- a/AzureFunctions.AngularClient/src/app/apps-list/apps-list.component.html
+++ b/AzureFunctions.AngularClient/src/app/apps-list/apps-list.component.html
@@ -1,6 +1,6 @@
 <div class="browse-container">
 <img src="image/functions.svg" />
-<h2>{{ 'functionApps' | translate }}</h2><i *ngIf="appsNode?.isLoading" class="fa fa-refresh fa-spin fa-fw"></i>
+<h2>{{ 'functionApps' | translate }}</h2><i *ngIf="!apps" class="fa fa-refresh fa-spin fa-fw"></i>
 
 <div class="bars">
   <label>{{ 'locationColon' | translate }}</label>
@@ -56,13 +56,13 @@
     </ng-container>
   </tr>
 
-  <tr *ngIf="appsNode?.isLoading">
+  <tr *ngIf="!apps">
     <td colspan="4">{{'functionMonitor_loading' | translate}}</td>
     <td colspan="4"></td>
   </tr>
 </tbl>
 
-<div *ngIf="!appsNode?.isLoading && initialized && table.items.length === 0" class="empty-browse">
+<div *ngIf="apps && table.items.length === 0" class="empty-browse">
   <img src="image/emptybrowse-functions.svg" />
   <h4>{{'emptyBrowse_title' | translate}}</h4>
   <span>{{'emptyBrowse' | translate}}</span>
